--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.app.rachmad.restaurant.details.RestaurantDetailsActivity"></activity>
+        <activity
+            android:name="com.app.rachmad.restaurant.details.RestaurantDetailsActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name="com.app.rachmad.restaurant.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
