--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.app.rachmad.retrofit">
+    package="com.app.rachmad.restaurant">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,10 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name="com.app.rachmad.restaurant.profile.AboutActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name="com.app.rachmad.restaurant.details.RestaurantDetailsActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name="com.app.rachmad.restaurant.MainActivity">
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name="com.app.rachmad.restaurant.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
